src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__exb.snap
---
source: src/importer/exmaralda/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="dipl::abbreviation" attr.type="string"/>
    <key id="k1" for="node" attr.name="norm::abbreviation" attr.type="string"/>
    <key id="k2" for="node" attr.name="dipl::comment" attr.type="string"/>
    <key id="k3" for="node" attr.name="norm::comment" attr.type="string"/>
    <key id="k4" for="node" attr.name="dipl::dipl" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k6" for="node" attr.name="annis::file" attr.type="string"/>
    <key id="k7" for="node" attr.name="norm::l1" attr.type="string"/>
    <key id="k8" for="node" attr.name="norm::l2" attr.type="string"/>
    <key id="k9" for="node" attr.name="norm::languages-used" attr.type="string"/>
    <key id="k10" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k11" for="node" attr.name="norm::lemma" attr.type="string"/>
    <key id="k12" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k13" for="node" attr.name="norm::norm" attr.type="string"/>
    <key id="k14" for="node" attr.name="norm::personal-anno-key-1" attr.type="string"/>
    <key id="k15" for="node" attr.name="norm::personal-anno-key-2" attr.type="string"/>
    <key id="k16" for="node" attr.name="norm::pos" attr.type="string"/>
    <key id="k17" for="node" attr.name="dipl::sentence" attr.type="string"/>
    <key id="k18" for="node" attr.name="annis::time" attr.type="string"/>
    <key id="k19" for="node" attr.name="annis::tok" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="import">
            <data key="k12">corpus</data>
        </node>
        <node id="import/exmaralda">
            <data key="k12">corpus</data>
        </node>
        <node id="import/exmaralda/test_doc">
            <data key="k0">dipl</data>
            <data key="k1">norm</data>
            <data key="k12">corpus</data>
            <data key="k14">personal-anno-value-1</data>
            <data key="k15">personal-anno-value-2</data>
            <data key="k2">was late for elicitation</data>
            <data key="k3">was on time</data>
            <data key="k5">test_doc</data>
            <data key="k7">eng</data>
            <data key="k8">deu</data>
            <data key="k9">eng,eng</data>
        </node>
        <node id="import/exmaralda/test_file.wav">
            <data key="k12">file</data>
            <data key="k6">tests/data/import/exmaralda/clean/import/exmaralda/test_file.wav</data>
        </node>
        <node id="import/exmaralda/test_doc#T286">
            <data key="k12">node</data>
            <data key="k19"> </data>
        </node>
        <node id="import/exmaralda/test_doc#T0">
            <data key="k12">node</data>
            <data key="k19"> </data>
        </node>
        <node id="import/exmaralda/test_doc#T1">
            <data key="k12">node</data>
            <data key="k19"> </data>
        </node>
        <node id="import/exmaralda/test_doc#T2">
            <data key="k12">node</data>
            <data key="k19"> </data>
        </node>
        <node id="import/exmaralda/test_doc#T3">
            <data key="k12">node</data>
            <data key="k19"> </data>
        </node>
        <node id="import/exmaralda/test_doc#T4">
            <data key="k12">node</data>
            <data key="k19"> </data>
        </node>
        <node id="import/exmaralda/test_doc#t_dipl_T286-T1">
            <data key="k10">dipl</data>
            <data key="k12">node</data>
            <data key="k18">0-2.22222</data>
            <data key="k19">I&apos;m</data>
            <data key="k4">I&apos;m</data>
        </node>
        <node id="import/exmaralda/test_doc#t_dipl_T1-T2">
            <data key="k10">dipl</data>
            <data key="k12">node</data>
            <data key="k18">2.22222-3.33333</data>
            <data key="k19">in</data>
            <data key="k4">in</data>
        </node>
        <node id="import/exmaralda/test_doc#t_dipl_T2-T3">
            <data key="k10">dipl</data>
            <data key="k12">node</data>
            <data key="k18">3.33333-4.44444</data>
            <data key="k19">New</data>
            <data key="k4">New</data>
        </node>
        <node id="import/exmaralda/test_doc#t_dipl_T3-T4">
            <data key="k10">dipl</data>
            <data key="k12">node</data>
            <data key="k18">4.44444-5.55555</data>
            <data key="k19">York</data>
            <data key="k4">York</data>
        </node>
        <node id="import/exmaralda/test_doc#t_norm_T286-T0">
            <data key="k10">norm</data>
            <data key="k12">node</data>
            <data key="k13">I</data>
            <data key="k18">0-1.11111</data>
            <data key="k19">I</data>
        </node>
        <node id="import/exmaralda/test_doc#t_norm_T0-T1">
            <data key="k10">norm</data>
            <data key="k12">node</data>
            <data key="k13">am</data>
            <data key="k18">1.11111-2.22222</data>
            <data key="k19">am</data>
        </node>
        <node id="import/exmaralda/test_doc#t_norm_T1-T2">
            <data key="k10">norm</data>
            <data key="k12">node</data>
            <data key="k13">in</data>
            <data key="k18">2.22222-3.33333</data>
            <data key="k19">in</data>
        </node>
        <node id="import/exmaralda/test_doc#t_norm_T2-T4">
            <data key="k10">norm</data>
            <data key="k12">node</data>
            <data key="k13">New York</data>
            <data key="k18">3.33333-5.55555</data>
            <data key="k19">New York</data>
        </node>
        <node id="import/exmaralda/test_doc#a_dipl_T286-T4">
            <data key="k10">dipl</data>
            <data key="k12">node</data>
            <data key="k17">1</data>
            <data key="k18">0-5.55555</data>
        </node>
        <node id="import/exmaralda/test_doc#a_norm_T286-T0">
            <data key="k10">norm</data>
            <data key="k11">I</data>
            <data key="k12">node</data>
            <data key="k16">PRON</data>
            <data key="k18">0-1.11111</data>
        </node>
        <node id="import/exmaralda/test_doc#a_norm_T0-T1">
            <data key="k10">norm</data>
            <data key="k11">be</data>
            <data key="k12">node</data>
            <data key="k16">VERB</data>
            <data key="k18">1.11111-2.22222</data>
        </node>
        <node id="import/exmaralda/test_doc#a_norm_T1-T2">
            <data key="k10">norm</data>
            <data key="k11">in</data>
            <data key="k12">node</data>
            <data key="k16">ADP</data>
            <data key="k18">2.22222-3.33333</data>
        </node>
        <node id="import/exmaralda/test_doc#a_norm_T2-T4">
            <data key="k10">norm</data>
            <data key="k11">New York</data>
            <data key="k12">node</data>
            <data key="k16">ADP</data>
            <data key="k18">3.33333-5.55555</data>
        </node>
        <edge id="e0" source="import/exmaralda/test_doc#t_norm_T1-T2" target="import/exmaralda/test_doc#T1" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="import/exmaralda/test_doc#t_dipl_T3-T4" target="import/exmaralda/test_doc#T3" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="import/exmaralda/test_doc#t_dipl_T286-T1" target="import/exmaralda/test_doc#T286" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="import/exmaralda/test_doc#t_dipl_T286-T1" target="import/exmaralda/test_doc#T0" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="import/exmaralda/test_doc#a_norm_T0-T1" target="import/exmaralda/test_doc#T0" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="import/exmaralda/test_doc#t_norm_T2-T4" target="import/exmaralda/test_doc#T2" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="import/exmaralda/test_doc#t_norm_T2-T4" target="import/exmaralda/test_doc#T3" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="import/exmaralda/test_doc#t_norm_T286-T0" target="import/exmaralda/test_doc#T286" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="import/exmaralda/test_doc#t_dipl_T1-T2" target="import/exmaralda/test_doc#T1" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="import/exmaralda/test_doc#a_norm_T1-T2" target="import/exmaralda/test_doc#T1" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="import/exmaralda/test_doc#a_dipl_T286-T4" target="import/exmaralda/test_doc#T286" label="Coverage/annis/">
        </edge>
        <edge id="e11" source="import/exmaralda/test_doc#a_dipl_T286-T4" target="import/exmaralda/test_doc#T0" label="Coverage/annis/">
        </edge>
        <edge id="e12" source="import/exmaralda/test_doc#a_dipl_T286-T4" target="import/exmaralda/test_doc#T1" label="Coverage/annis/">
        </edge>
        <edge id="e13" source="import/exmaralda/test_doc#a_dipl_T286-T4" target="import/exmaralda/test_doc#T2" label="Coverage/annis/">
        </edge>
        <edge id="e14" source="import/exmaralda/test_doc#a_dipl_T286-T4" target="import/exmaralda/test_doc#T3" label="Coverage/annis/">
        </edge>
        <edge id="e15" source="import/exmaralda/test_doc#t_norm_T0-T1" target="import/exmaralda/test_doc#T0" label="Coverage/annis/">
        </edge>
        <edge id="e16" source="import/exmaralda/test_doc#t_dipl_T2-T3" target="import/exmaralda/test_doc#T2" label="Coverage/annis/">
        </edge>
        <edge id="e17" source="import/exmaralda/test_doc#a_norm_T2-T4" target="import/exmaralda/test_doc#T2" label="Coverage/annis/">
        </edge>
        <edge id="e18" source="import/exmaralda/test_doc#a_norm_T2-T4" target="import/exmaralda/test_doc#T3" label="Coverage/annis/">
        </edge>
        <edge id="e19" source="import/exmaralda/test_doc#a_norm_T286-T0" target="import/exmaralda/test_doc#T286" label="Coverage/annis/">
        </edge>
        <edge id="e20" source="import/exmaralda/test_doc#T3" target="import/exmaralda/test_doc#T4" label="Ordering/annis/">
        </edge>
        <edge id="e21" source="import/exmaralda/test_doc#T2" target="import/exmaralda/test_doc#T3" label="Ordering/annis/">
        </edge>
        <edge id="e22" source="import/exmaralda/test_doc#T1" target="import/exmaralda/test_doc#T2" label="Ordering/annis/">
        </edge>
        <edge id="e23" source="import/exmaralda/test_doc#T0" target="import/exmaralda/test_doc#T1" label="Ordering/annis/">
        </edge>
        <edge id="e24" source="import/exmaralda/test_doc#T286" target="import/exmaralda/test_doc#T0" label="Ordering/annis/">
        </edge>
        <edge id="e25" source="import/exmaralda/test_doc#t_dipl_T2-T3" target="import/exmaralda/test_doc#t_dipl_T3-T4" label="Ordering/annis/dipl">
        </edge>
        <edge id="e26" source="import/exmaralda/test_doc#t_dipl_T286-T1" target="import/exmaralda/test_doc#t_dipl_T1-T2" label="Ordering/annis/dipl">
        </edge>
        <edge id="e27" source="import/exmaralda/test_doc#t_dipl_T1-T2" target="import/exmaralda/test_doc#t_dipl_T2-T3" label="Ordering/annis/dipl">
        </edge>
        <edge id="e28" source="import/exmaralda/test_doc#t_norm_T1-T2" target="import/exmaralda/test_doc#t_norm_T2-T4" label="Ordering/annis/norm">
        </edge>
        <edge id="e29" source="import/exmaralda/test_doc#t_norm_T286-T0" target="import/exmaralda/test_doc#t_norm_T0-T1" label="Ordering/annis/norm">
        </edge>
        <edge id="e30" source="import/exmaralda/test_doc#t_norm_T0-T1" target="import/exmaralda/test_doc#t_norm_T1-T2" label="Ordering/annis/norm">
        </edge>
        <edge id="e31" source="import/exmaralda/test_doc#T2" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e32" source="import/exmaralda/test_doc#T286" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e33" source="import/exmaralda" target="import" label="PartOf/annis/">
        </edge>
        <edge id="e34" source="import/exmaralda/test_doc#T3" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e35" source="import/exmaralda/test_doc#T0" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e36" source="import/exmaralda/test_doc" target="import/exmaralda" label="PartOf/annis/">
        </edge>
        <edge id="e37" source="import/exmaralda/test_doc#T4" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e38" source="import/exmaralda/test_doc#T1" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e39" source="import/exmaralda/test_file.wav" target="import/exmaralda/test_doc" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
