src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__exb_fail_for_bad_timevalue.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap()
---
Error during importing corpus to ./tests/data/import/exmaralda/fail-bad_timevalue/test_doc.exb with "import_exmaralda": "Failed to parse tli time value."
