src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__exb_fail_for_timeline.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap()
---
Error during importing corpus to ./tests/data/import/exmaralda/fail-corrupt_timeline/import/exmaralda/test_doc.exb with "import_exmaralda": "Start time is bigger than end time for ids: T1--T2 "
