src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__invalid_fail.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap().to_string()
---
Error during importing corpus from ./tests/data/import/exmaralda/fail-invalid/import/exmaralda/test_doc_invalid.exb with import_exmaralda: Start time is bigger than end time for ids: T1--T2
