src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__merge_spans_disabled.snap
---
source: src/importer/exmaralda/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="SPK0::abbreviation" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k2" for="node" attr.name="X::italic" attr.type="string"/>
    <key id="k3" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k4" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k6" for="node" attr.name="X::underlined" attr.type="string"/>
    <key id="k7" for="node" attr.name="X::v" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="mergable_spans">
            <data key="k4">corpus</data>
        </node>
        <node id="mergable_spans/example">
            <data key="k0">X</data>
            <data key="k1">example</data>
            <data key="k4">corpus</data>
        </node>
        <node id="mergable_spans/example#T0">
            <data key="k4">node</data>
            <data key="k5"> </data>
        </node>
        <node id="mergable_spans/example#T1">
            <data key="k4">node</data>
            <data key="k5"> </data>
        </node>
        <node id="mergable_spans/example#T11">
            <data key="k4">node</data>
            <data key="k5"> </data>
        </node>
        <node id="mergable_spans/example#t_SPK0_v_T0-T1">
            <data key="k3">X</data>
            <data key="k4">node</data>
            <data key="k5">An</data>
            <data key="k7">An</data>
        </node>
        <node id="mergable_spans/example#t_SPK0_v_T1-T11">
            <data key="k3">X</data>
            <data key="k4">node</data>
            <data key="k5">example</data>
            <data key="k7">example</data>
        </node>
        <node id="mergable_spans/example#a_SPK0_underlined_T1-T11">
            <data key="k3">X</data>
            <data key="k4">node</data>
            <data key="k6">underlined</data>
        </node>
        <node id="mergable_spans/example#a_SPK0_italic_T1-T11">
            <data key="k2">italic</data>
            <data key="k3">X</data>
            <data key="k4">node</data>
        </node>
        <edge id="e0" source="mergable_spans/example#t_SPK0_v_T0-T1" target="mergable_spans/example#T0" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="mergable_spans/example#t_SPK0_v_T1-T11" target="mergable_spans/example#T1" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="mergable_spans/example#a_SPK0_underlined_T1-T11" target="mergable_spans/example#T1" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="mergable_spans/example#a_SPK0_italic_T1-T11" target="mergable_spans/example#T1" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="mergable_spans/example#T0" target="mergable_spans/example#T1" label="Ordering/annis/">
        </edge>
        <edge id="e5" source="mergable_spans/example#T1" target="mergable_spans/example#T11" label="Ordering/annis/">
        </edge>
        <edge id="e6" source="mergable_spans/example#t_SPK0_v_T0-T1" target="mergable_spans/example#t_SPK0_v_T1-T11" label="Ordering/annis/v">
        </edge>
        <edge id="e7" source="mergable_spans/example" target="mergable_spans" label="PartOf/annis/">
        </edge>
        <edge id="e8" source="mergable_spans/example#T0" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
        <edge id="e9" source="mergable_spans/example#T1" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
        <edge id="e10" source="mergable_spans/example#T11" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
        <edge id="e11" source="mergable_spans/example#t_SPK0_v_T0-T1" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
        <edge id="e12" source="mergable_spans/example#t_SPK0_v_T1-T11" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
        <edge id="e13" source="mergable_spans/example#a_SPK0_underlined_T1-T11" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
        <edge id="e14" source="mergable_spans/example#a_SPK0_italic_T1-T11" target="mergable_spans/example" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
